--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "User.ts",
   "scripts": {
-    "start": "node User.ts",
+    "start": "tsc User.ts && node User.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
