--- a/typescript_learn/package.json
+++ b/typescript_learn/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "test",
+  "name": "typescript_learn",
   "version": "1.0.0",
-  "description": "",
-  "main": "User.ts",
+  "description": "some notes when learning typescript which is js's super set",
+  "main": "User.js",
   "scripts": {
     "start": "tsc User.ts && node User.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "chenbbay",
   "license": "ISC",
   "devDependencies": {
-    "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
 }
